--- a/app3/templates/my_cards.html
+++ b/app3/templates/my_cards.html
@@ -248,7 +248,7 @@
   }
 </style>
 
-<h2>💎 My Jason Momoa Premium Fan Cards</h2>
+<h2>💎 My Simone Susinna Premium Fan Cards</h2>
 
 <!-- Download All Button -->
 <div style="text-align:center;">
@@ -263,11 +263,11 @@
         <img src="{{ card.keanu_photo.url }}" class="avatar" alt="Keanu Reeves">
 
         <div class="header">
-          <h1>KEANU REEVES</h1>
+          <h1>Simone Susinna</h1>
           <span>FANS CARD</span>
         </div>
 
-        <div class="club-name">Member of the Keanu Legacy Club</div>
+        <div class="club-name">Member of the Simone Susinna Legacy Club</div>
 
         <div class="details">
           <div class="left">
@@ -288,7 +288,7 @@
 
         <div class="footer">
           Verified by:
-          <div class="signature">Keanu Reeves</div>
+          <div class="signature">Simone Susinna</div>
         </div>
 
         <div class="quote">
