--- a/tracking/templates/base2.html
+++ b/tracking/templates/base2.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jason M</title>
+  <title>Simone Susinna</title>
 
   <style>
     /* NAV & FOOTER */
@@ -303,7 +303,7 @@
   </div>
   <div class="footer-section">
     <h4>Contact Us</h4>
-    <p>Email: support@GeorgeHarveyStrait.com</p>
+    <p>Email: Simonesussinamanagement550@gmail.com</p>
   </div>
   <div class="footer-bottom">&copy; {{ year }} Simone Susinna. All rights reserved.</div>
 </footer>
